--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="tooltip" > About Us</div>
         </div>
         <div class="bullet" data-section=".skills"> 
-            <div class="tooltip"> TimeLine</div>
+            <div class="tooltip"> Skills</div>
         </div>
         <div class="bullet" data-section=".gallery"> 
             <div class="tooltip"> Gallery</div>
